force-app/main/default/objects/Activity/fields/Activity_Result__c.field-meta.xml
<CustomField>
    <fullName>Activity_Result__c</fullName>
    <label>Activity Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-up Required</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Sent Email</fullName>
            </value>
            <value>
                <fullName>New Contact Information</fullName>
            </value>
            <value>
                <fullName>Wrong Contact Information</fullName>
            </value>
            <value>
                <fullName>Scheduled Site Visit</fullName>
            </value>
            <value>
                <fullName>Scheduled Service Call</fullName>
            </value>
            <value>
                <fullName>Sent Quote</fullName>
            </value>
            <value>
                <fullName>Followed up with Quote</fullName>
            </value>
            <value>
                <fullName>New Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity Update</fullName>
            </value>
            <value>
                <fullName>General Update</fullName>
            </value>
            <value>
                <fullName>No Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>