force-app/main/default/objects/Activity/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call: Power</fullName>
            </value>
            <value>
                <fullName>Call Connect: Account Management</fullName>
            </value>
            <value>
                <fullName>Call Connect: Current Opportunity</fullName>
            </value>
            <value>
                <fullName>Call Connect: Prospecting (New)</fullName>
            </value>
            <value>
                <fullName>Meeting: Power</fullName>
            </value>
            <value>
                <fullName>Meeting: Account Management</fullName>
            </value>
            <value>
                <fullName>Meeting: Current Opportunity</fullName>
            </value>
            <value>
                <fullName>Meeting: Prospecting</fullName>
            </value>
            <value>
                <fullName>Meeting: Account Planning</fullName>
            </value>
            <value>
                <fullName>Meeting: Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>