force-app/main/default/objects/Activity/fields/Pardot_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Comments__c</fullName>
    <label>Pardot Comments</label>
    <type>TextArea</type>
</CustomField>