force-app/main/default/objects/Activity/listViews/High_Priority_Tasks.listView-meta.xml
<ListView>
    <fullName>High_Priority_Tasks</fullName>
    <columns>EVENT.START_DATE_TIME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.PRIORITY</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Tasks - High Priority</label>
</ListView>