force-app/main/default/objects/Activity/listViews/MyActivitiesSiteVisits.listView-meta.xml
<ListView>
    <fullName>MyActivitiesSiteVisits</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>site visit</value>
    </filters>
    <label>My Activities - Site Visits</label>
</ListView>