force-app/main/default/objects/Activity/listViews/OpenCampaignActivities.listView-meta.xml
<ListView>
    <fullName>OpenCampaignActivities</fullName>
    <columns>EVENT.START_DATE_TIME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>campaign</value>
    </filters>
    <label>My Tasks - Campaigns</label>
</ListView>